[gd_scene load_steps=2 format=3 uid="uid://1fr52nplx0as"]

[ext_resource type="Script" path="res://src/ZLighting/Scripts/z_light_receiver.gd" id="1_tokm8"]

[node name="ZLightReceiver" type="Area2D"]
collision_layer = 32768
collision_mask = 32768
input_pickable = false
script = ExtResource("1_tokm8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
debug_color = Color(0, 1, 0, 0.419608)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
